--- a/sass/layout/_future-events.scss
+++ b/sass/layout/_future-events.scss
@@ -159,6 +159,10 @@
         grid-column: 1 / -1;
         margin-left: 0;
       }
+
+      @media only screen and (max-width: $bp-smaller) {
+        grid-row: 5 / 6;
+      }
     }
   }
 
@@ -196,6 +200,10 @@
       @media only screen and (max-width: $bp-medium) {
         grid-column: 1 / -1;
         grid-row: 4 / 5;
+      }
+
+      @media only screen and (max-width: $bp-smaller) {
+        grid-row: 6 / 7;
       }
     }
   }
